Added unit test for backend